	                     EventTestDeleteProc):
	* generic/tclNotify.c (Tcl_DeleteEvents): Fixed Tcl_DeleteEvents
	not to get a pointer smash when deleting the last event in the
	queue. Added test code in 'tcltest' and a new file of test cases
	'notify.test' to exercise this functionality; several of the new
	test cases fail for the original code and pass for the corrected
	code.
	
2003-02-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:		Bumped to version 8.4.2.
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure:
	* unix/configure.in:
	* unix/tcl.m4:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure:
	* win/configure.in:
	* macosx/Tcl.pbproj/project.pbxproj:

	* generic/tclStringObj.c (Tcl_GetCharLength): perf tweak

	* unix/tcl.m4: correct HP-UX ia64 --enable-64bit build flags

2003-02-14  Kevin Kenny  <kennykb@users.sourceforge.net>

	* win/tclWinTime.c: Added code to test and compensate for
	forward leaps of the performance counter. See the MSDN Knowledge
	Base article Q274323 for the hardware problem that makes this
	necessary on certain machines.
	* tests/winTime.test: Revised winTime-2.1 - it had a tolerance
	of thousands of seconds, rather than milliseconds. (What's six
	orders of magnitude among friends?
	Both the above changes are triggered by a problem reported at
	http://aspn.activestate.com/ASPN/Mail/Message/ActiveTcl/1536811
	although the developers find it difficult to believe that it
	accounts for the observed behavior and suspect a fault in the
	RTC chip.

2003-02-13  Kevin Kenny  <kennykb@users.sourceforge.net>

	* win/tclWinInit.c: Added conversion from the system encoding
	to tcl_platform(user), so that it works with non-ASCII7 user names.
	[Bug 685926]
	
	* doc/tclsh.1: Added language to describe the handling of the
	end-of-file character \u001a embedded in a script file.
	[Bug 685485]
	
2003-02-10  Vince Darley  <vincentdarley@users.sourceforge.net>

	* tests/fileName.test: